fixed header search & language nav focus. fixed mobile header search. fixed navigation z-index problems.

--- a/theme/demos/wknd/components/languagenavigation/languagenavigation.css
+++ b/theme/demos/wknd/components/languagenavigation/languagenavigation.css
@@ -1,7 +1,10 @@
 @layer components {
   .cmp-languagenavigation {
     @apply relative z-10;
-    @apply focus:ring-2;
+    > .cmp-languagenavigation__item {
+      @apply transition-all duration-300;
+      @apply focus:border-shade-1 focus:outline-none focus:ring-2 focus:ring-focus focus:ring-offset-2 focus:ring-offset-background;
+    }
   }
 
   .languagenavigation.open {
